--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^5.4.0",
     "@nestjs/typeorm": "^6.1.2",
     "mysql": "^2.17.1",
+    "nestjs-typeorm-paginate": "^0.1.8",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
