--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
+    "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.2",
     "mysql": "^2.17.1",
     "nestjs-typeorm-paginate": "^0.1.8",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
+    "swagger-ui-express": "^4.0.7",
     "typeorm": "^0.2.18",
     "typescript": "^3.0.1"
   },
